--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <body>
 
 
- <div id="credits"> 
+<!--  <div id="credits"> 
   <div class = "socaial" style="margin-right:10px">Created by @Yasai</div>
   <div class = "socaial" style="margin-right:10px; margin-bottom: -40px">©️All my products may be used in both personal and commercial projects   </div>
   <div class ="iconlink"> 
@@ -87,7 +87,7 @@
   </div>
 
 </div>
-<div class = "logo" style="margin-left:10px; margin-bottom: -40px; "><a href = "https://wangyasai.github.io/designtools.html"><img src="logo.png" style ="width: 40px"></a></div>
+<div class = "logo" style="margin-left:10px; margin-bottom: -40px; "><a href = "https://wangyasai.github.io/designtools.html"><img src="logo.png" style ="width: 40px"></a></div> -->
 <script type="text/javascript">
 
   var type;
